--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "json-server": "^0.17.3",
+    "socket.io-client": "^4.6.1",
     "vue": "^3.2.47",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
