--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "js-cookie": "^3.0.5",
     "json-server": "^0.17.3",
     "socket.io-client": "^4.6.1",
     "vue": "^3.2.47",
